# hermes

./: .dockerignore  .gitignore  Dockerfile  README.md  config_example.json  crontab  db_example.json  docker-compose.yaml  env_example  example_crontab  example_env  example_nginx  package-lock.json
.github/ISSUE_TEMPLATE/: bug_report.md  city-.md  en_bug_report.md  en_city_request.md  en_feature_request.md  en_place_request.md  es_bug_report.md  es_city_request.md  es_feature_request.md  es_place_request.md  feature_request.md  place-request.md
.github/workflows/: calibreapp-image-actions.yml
data/: config.json  importPlaces.js  init.js  madrid.json  setupCategories.js
docs/: index.html
docs/api/: hermes_openapi.yaml  hermes_postman.json  index.html
docs/en/: ABOUT.md
docs/es/: ABOUT.md  CONTRIBUTE.md  DEPLOY.md
docs/gantt/: frappe-gantt.min.js  index.html
server/: Dockerfile  README.md  cron.js  index.js  package-lock.json  package.json
server/controllers/: account.js  auth.js  places.js  planner.js  ratings.js  recommender.js  session.js  static.js
server/db/: addPlaces.js  init.js  models.js
server/hermes-rust/: README.md  index.js  package-lock.json  package.json
server/hermes-rust/native/: Cargo.toml
server/hermes-rust/native/src/: lib.rs  recommender.rs
server/localization/: index.js
server/logger/: logger.js
server/mail/: confirmDelete.pug  emailChange.pug  mail.js  newAccount.pug  newLogin.pug  passwordChange.pug  passwordRequest.pug  rateVisited.pug  startPlan.pug
server/planner/: domain.pddl  (+1 more)
web/: README.md  index.html
(+133 files in other folders)
