[package]
name = "hermes-rust"
version = "2.0.0"
authors = ["Álvaro Galisteo (https://alvaro.galisteo.me)"]
license = "GPL-3.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "hermes_rust"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
neon = "0.7.1"
